[gd_scene load_steps=2 format=3 uid="uid://b8qvxnm2yw7h5"]

[ext_resource type="Script" uid="uid://b4j7buwu6mq4o" path="res://Scripts/profile_editor.gd" id="1"]

[node name="ProfileEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="MainLayout" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NavigationBar" type="HBoxContainer" parent="MarginContainer/MainLayout"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BackButton" type="Button" parent="MarginContainer/MainLayout/NavigationBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "‚Üê Cancel"

[node name="Spacer" type="Control" parent="MarginContainer/MainLayout/NavigationBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="MarginContainer/MainLayout/NavigationBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Save Changes"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainLayout"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="ContentLayout" type="VBoxContainer" parent="MarginContainer/MainLayout/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30

[node name="HeaderLabel" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Edit Profile"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
layout_mode = 2

[node name="AvatarSection" type="VBoxContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="AvatarLabel" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/AvatarSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Avatar"

[node name="CurrentAvatarContainer" type="HBoxContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/AvatarSection"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CurrentAvatarPanel" type="PanelContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/AvatarSection/CurrentAvatarContainer"]
layout_mode = 2

[node name="CurrentAvatar" type="TextureRect" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/AvatarSection/CurrentAvatarContainer/CurrentAvatarPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="AvatarGridContainer" type="GridContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/AvatarSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 6

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
layout_mode = 2

[node name="DisplayNameSection" type="VBoxContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DisplayNameLabel" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/DisplayNameSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Display Name"

[node name="DisplayNameInput" type="LineEdit" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/DisplayNameSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
placeholder_text = "Enter display name (3-20 characters)"
max_length = 20

[node name="DisplayNameHelp" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/DisplayNameSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "This is how your name will appear in-game"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
layout_mode = 2

[node name="BioSection" type="VBoxContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BioLabel" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/BioSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Bio"

[node name="BioInput" type="TextEdit" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/BioSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "Tell us about yourself (max 200 characters)"
wrap_mode = 1

[node name="BioCharCount" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/BioSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "0 / 200 characters"
horizontal_alignment = 2

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
layout_mode = 2

[node name="ColorSection" type="VBoxContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ColorLabel" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/ColorSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Profile Color"

[node name="ColorPickerContainer" type="HBoxContainer" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/ColorSection"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PrimaryColorLabel" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/ColorSection/ColorPickerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Primary:"

[node name="PrimaryColorButton" type="ColorPickerButton" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/ColorSection/ColorPickerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
color = Color(0.298039, 0.686275, 0.313726, 1)

[node name="AccentColorLabel" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/ColorSection/ColorPickerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Accent:"

[node name="AccentColorButton" type="ColorPickerButton" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout/ColorSection/ColorPickerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
color = Color(0.956863, 0.262745, 0.211765, 1)

[node name="ErrorLabel" type="Label" parent="MarginContainer/MainLayout/ScrollContainer/ContentLayout"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1
